feat[public frontend/backend/private frontend]: change the way the importing and saving works of excel data, remove some fields and make database simpler, change profile to check for study variant based on study programme, intialize database on startup with data.sql